--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix Clone</title>
-    <link rel="stylesheet" href="../src/output.css">
-
+    <link rel="stylesheet" href="../src/output.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=language_chinese_dayi"
+    />
     <style>
-        .hero {
-            background-image: url(/public/assets/hero.jpg);
-            background-size: cover;
-            background-repeat: no-repeat; 
-
-        }
+      * {
+        font-family: Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+      }
+      body{
+        background-color: black;
+        color: #fff;
+      }
+      .hero {
+        background-image: url(/public/assets/hero.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+      .gradient {
+        background: linear-gradient(
+          360deg,
+          rgba(0, 0, 0, 0.85) 8%,
+          rgba(0, 0, 0, 0.8465) 15.67%,
+          rgba(0, 0, 0, 0.8361) 23.33%,
+          rgba(0, 0, 0, 0.8187) 31%,
+          rgba(0, 0, 0, 0.7944) 38.67%,
+          rgba(0, 0, 0, 0.7632) 46.33%,
+          rgba(0, 0, 0, 0.725) 54%,
+          rgba(0, 0, 0, 0.6868) 61.67%,
+          rgba(0, 0, 0, 0.6556) 69.33%,
+          rgba(0, 0, 0, 0.6312) 77%,
+          rgba(0, 0, 0, 0.781) 84.67%,
+          rgba(0, 0, 0, 0.856) 92.33%,
+          rgba(0, 0, 0, 0.945) 100%
+        );
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    <section>
-        <div class="hero w-screen h-screen bg-black opacity-90">
-            <div class="hero-content flex flex-col ">
-                <h1 class="text-white text-4xl">Unlimited movies, TV shows and more</h1>
-                <h4>Starts at ₹149. Cancel at any time.</h4>
-                <p>Ready to watch? Enter your email to create or restart your membership.</p>
-                <div>
-                    <input type="text">
-                    <button>Get Started</button>
-                </div>
-            </div>
+  <body >
+    <header class="grid grid-cols-2 py-[26px] px-36 absolute z-10 w-screen">
+      <div class="text-center">
+        <a href="/" class="block">
+          <svg
+            class="fill-[#e50914] h-10"
+            viewBox="0 0 111 30"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-hidden="true"
+            role="img"
+            class="default-ltr-cache-1d568uk ev1dnif2"
+          >
+            <g>
+              <path
+                d="M105.06233,14.2806261 L110.999156,30 C109.249227,29.7497422 107.500234,29.4366857 105.718437,29.1554972 L102.374168,20.4686475 L98.9371075,28.4375293 C97.2499766,28.1563408 95.5928391,28.061674 93.9057081,27.8432843 L99.9372012,14.0931671 L94.4680851,-5.68434189e-14 L99.5313525,-5.68434189e-14 L102.593495,7.87421502 L105.874965,-5.68434189e-14 L110.999156,-5.68434189e-14 L105.06233,14.2806261 Z M90.4686475,-5.68434189e-14 L85.8749649,-5.68434189e-14 L85.8749649,27.2499766 C87.3746368,27.3437061 88.9371075,27.4055675 90.4686475,27.5930265 L90.4686475,-5.68434189e-14 Z M81.9055207,26.93692 C77.7186241,26.6557316 73.5307901,26.4064111 69.250164,26.3117443 L69.250164,-5.68434189e-14 L73.9366389,-5.68434189e-14 L73.9366389,21.8745899 C76.6248008,21.9373887 79.3120255,22.1557784 81.9055207,22.2804387 L81.9055207,26.93692 Z M64.2496954,10.6561065 L64.2496954,15.3435186 L57.8442216,15.3435186 L57.8442216,25.9996251 L53.2186709,25.9996251 L53.2186709,-5.68434189e-14 L66.3436123,-5.68434189e-14 L66.3436123,4.68741213 L57.8442216,4.68741213 L57.8442216,10.6561065 L64.2496954,10.6561065 Z M45.3435186,4.68741213 L45.3435186,26.2498828 C43.7810479,26.2498828 42.1876465,26.2498828 40.6561065,26.3117443 L40.6561065,4.68741213 L35.8121661,4.68741213 L35.8121661,-5.68434189e-14 L50.2183897,-5.68434189e-14 L50.2183897,4.68741213 L45.3435186,4.68741213 Z M30.749836,15.5928391 C28.687787,15.5928391 26.2498828,15.5928391 24.4999531,15.6875059 L24.4999531,22.6562939 C27.2499766,22.4678976 30,22.2495079 32.7809542,22.1557784 L32.7809542,26.6557316 L19.812541,27.6876933 L19.812541,-5.68434189e-14 L32.7809542,-5.68434189e-14 L32.7809542,4.68741213 L24.4999531,4.68741213 L24.4999531,10.9991564 C26.3126816,10.9991564 29.0936358,10.9054269 30.749836,10.9054269 L30.749836,15.5928391 Z M4.78114163,12.9684132 L4.78114163,29.3429562 C3.09401069,29.5313525 1.59340144,29.7497422 0,30 L0,-5.68434189e-14 L4.4690224,-5.68434189e-14 L10.562377,17.0315868 L10.562377,-5.68434189e-14 L15.2497891,-5.68434189e-14 L15.2497891,28.061674 C13.5935889,28.3437998 11.906458,28.4375293 10.1246602,28.6868498 L4.78114163,12.9684132 Z"
+              ></path>
+            </g>
+          </svg>
+        </a>
+      </div>
+      <div class="text-right">
+        <div class="inline-block">
+          <!-- <i class="fa-solid fa-globe text-white translate-x-6"></i> -->
+          <span
+            class="material-symbols-outlined text-white translate-x-7 translate-y-2"
+          >
+            language_chinese_dayi
+          </span>
+          <select
+            name=""
+            id=""
+            class="bg-transparent text-white py-1 pr-0 pl-6 border-[1px] rounded-md border-slate-500"
+          >
+            <option value="">English</option>
+            <option value="">Hindi</option></select
+          >
         </div>
-    </section>
-</body>
-
+        <a
+          class="bg-[#e50914] px-2 py-1 rounded-md text-white font-medium inline-block"
+          href="/login"
+          >Sign In</a
+        >
+      </div>
+    </header>
+    <div class="hero">
+      <div
+        class="relative h-screen bg-[url('/assets/hero.jpg')] bg-no-repeat bg-cover bg-center"
+      >
+        <div class="gradient absolute inset-0"></div>
+        <div class="absolute inset-0 grid items-center justify-center mx-auto text-center  max-w-3xl translate-y-2">
+          <div>
+            <h1 class="text-6xl font-bold">
+              Unlimited movies, TV shows and more
+            </h1>
+            <h2 class="text-xl font-semibold mt-5">Starts at ₹149. Cancel at any time.</h2>
+            <h3 class="font-medium mt-5">
+              Ready to watch? Enter your email to create or restart your
+              membership.
+            </h3>
+            <form action="" class="mt-3">
+              <input type="text" class="border-1 w-96 h-[60px] p-4 border-slate-50 rounded-sm bg-white/5 font-semibold"  placeholder="Email Adress"/>
+              <button class="text-white bg-[#e50914] py-4 px-6 rounded-md text-xl font-bold inline-block ml-2">Get started &gt;</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
