--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,8 @@
             id=""
             class="bg-transparent text-white py-1 pr-0 pl-6 border-[1px] rounded-md border-slate-500"
           >
-            <option value="">English</option>
-            <option value="">Hindi</option></select
+            <option value="" class="text-black ">English</option>
+            <option value="" class="text-black">Hindi</option></select
           >
         </div>
         <a
